<resources>
    <string name="app_name">SmarTeleprompter</string>

    <!--Main page strings-->
    <string name="main_edittext_search">Enter a title here to search</string>
    <string name="main_sort_date">Date</string>
    <string name="main_sort_name">Name</string>
    <string-array name="main_spinner_items">
        <item>@string/main_sort_date</item>
        <item>@string/main_sort_name</item>
    </string-array>
    <string name="main_resume_button">Resume Script</string>
    <string name="main_content_description_script_menu">%1$s menu icon</string>
    <string name="main_content_description_new">new script icon</string>

    <string name="main_edittext_search_savestate">mainEditTextSearchSaveState</string>

    <!--Menu-->
    <string name="menu_main_settings">Settings</string>
    <string name="main_menu_settings_content_description">settings icon</string>

    <string name="menu_main_script_settings">Settings</string>
    <string name="menu_main_script_settings_script_key">menuMainScriptSettingsScriptKey</string>

    <string name="menu_main_delete">Delete</string>
    <string name="menu_main_edit">Edit</string>


    <!--Loader-->
    <string name="loader_search_title_key">loader_search_title_key</string>
    <string name="loader_search_list_key">loader_search_list_key</string>

    <!--Settings-->
    <string name="settings_theme">Theme (Restarts app)</string>
    <string name="settings_scroll_speed">Default Scroll Speed</string>
    <string name="settings_wpm">WPM</string>
    <string name="settings_font_size">Default Font Size</string>
    <string name="settings_pt">pt</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string-array name="settings_spinner_theme">
        <item>@string/settings_theme_light</item>
        <item>@string/settings_theme_dark</item>
    </string-array>

    <!--Defaults-->
    <string name="default_scroll_speed">300</string>
    <string name="default_font_size">14</string>

    <!--ScriptSettings-->
    <string name="script_settings_original_date_dynamic">Original date: %1$s</string>
    <string name="script_settings_current_date_dynamic">Current date: %1$s</string>
    <string name="script_settings_original_time_dynamic">Original time: %1$s</string>
    <string name="script_settings_current_time_dynamic">Current time: %1$s</string>
    <string name="script_settings_title_hint_edittext">Enter new title here</string>
    <string name="script_settings_wait_tags_toast"><![CDATA[Try adding a wait-tag in your teleprompt!   e.g. <wait:5>]]></string>

    <string name="script_settings_delete_dialog_title">Are you sure?</string>
    <string name="script_settings_delete_dialog_message">Are you sure you want to delete "%1$s"?</string>
    <string name="script_settings_delete_dialog_yes">Delete</string>
    <string name="script_settings_delete_dialog_no">Cancel</string>

    <!--Teleprompter-->
    <string name="teleprompter_pass_mode">teleprompterPassMode</string>
    <string name="teleprompter_pass_mode_edit">teleprompterModePassEdit</string>
    <string name="teleprompter_pass_mode_smart_scroll">teleprompterPassModeSmartScroll</string>
    <string name="teleprompter_pass_mode_new">teleprompterModePassNew</string>
    <string name="teleprompter_pass_mode_normal">teleprompterPassModeNormal</string>
    <string name="teleprompter_pass_script">teleprompterPassScript</string>

    <string name="teleprompter_title_hint">Title</string>
    <string name="teleprompter_body_hint">Body</string>

    <string name="script_settings_title_textview">Title</string>
    <string name="script_settings_date_textview">Date</string>
    <string name="script_settings_date_button">Set Date</string>
    <string name="script_settings_time_textview">Time</string>
    <string name="script_settings_time_button">Set Time</string>
    <string name="script_settings_scroll_textview">Scroll Speed</string>
    <string name="script_settings_font_textview">Font Size</string>
    <string name="script_settings_delete_button">DELETE</string>

    <string name="teleprompter_dialog_dont_save_title">Are you sure?</string>
    <string name="teleprompter_dialog_dont_save_body">Do you want to discard your changes?</string>
    <string name="teleprompter_dialog_dont_save_yes">Discard</string>
    <string name="teleprompter_dialog_dont_save_no">Cancel</string>

    <string name="telepromter_fab_content_description_play">play button icon</string>
    <string name="telepromter_fab_content_description_pause">pause button icon</string>
    <string name="telepromter_fab_content_description_save">save button icon</string>

    <string name="teleprompter_mode_savestate">teleprompterModeSaveState</string>
    <string name="teleprompter_scrolling_savestate">teleprompterScrollingSaveState</string>
    <string name="teleprompter_script_savestate">teleprompterScriptSaveState</string>
    <string name="teleprompter_script_title_savestate">teleprompterScriptTitleSaveState</string>
    <string name="teleprompter_script_body_savestate">teleprompterScriptBodySaveState</string>

    <!--SharedPreferences-->
    <string name="shared_pref_settings_key">SmarTeleprompterSharedPreferencesSettingsKey</string>
    <string name="shared_pref_settings_theme_key">SmarTeleprompterSharedPreferencesSettingsThemeKey</string>
    <string name="shared_pref_settings_scroll_speed_key">SmarTeleprompterSharedPreferencesSettingsScrollSpeedKey</string>
    <string name="shared_pref_settings_font_size_key">SmarTeleprompterSharedPreferencesSettingsFontSizeKey</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--AdMob-->
    <string name="admob_app_id">ca-app-pub-1573276806353273~2543157340</string>

    <!--Widget-->
    <string name="widget_empty_text">No scripts</string>

</resources>
