<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/settings_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="end">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_theme"/>
        <Spinner
            android:id="@+id/settings_theme_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="end">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_scroll_speed"/>

        <EditText
            android:id="@+id/settings_scroll_speed_edittext"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:hint="@string/default_scroll_speed"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="end">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_font_size"/>

        <EditText
            android:id="@+id/settings_font_size_edittext"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:hint="@string/default_font_size"
            android:inputType="number" />
    </LinearLayout>
 </LinearLayout>