<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/script_settings_title_textview" />

            <EditText
                android:id="@+id/script_settings_title_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/script_settings_title_hint_edittext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/script_settings_date_textview"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/script_settings_date_original_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="Original: 12/34/5678" />

                <TextView
                    android:id="@+id/script_settings_date_current_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="Current: 12/34/5678" />
            </LinearLayout>

            <Button
                android:id="@+id/script_settings_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/script_settings_date_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/script_settings_time_textview"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/script_settings_time_original_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="Original: 12:34am" />

                <TextView
                    android:id="@+id/script_settings_time_current_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="Current: 12:34am" />
            </LinearLayout>

            <Button
                android:id="@+id/script_settings_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/script_settings_time_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/script_settings_scroll_textview"/>

            <EditText
                android:inputType="number"
                android:id="@+id/script_settings_scroll_speed_edittext"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_scroll_speed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/script_settings_font_textview"/>

            <EditText
                android:inputType="number"
                android:id="@+id/script_settings_font_size_edittext"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:hint="@string/default_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="end"
            android:alpha="0.5"
            android:clickable="false"
            android:background="#ff7d7d">

            <Button
                android:id="@+id/script_settings_delete_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/script_settings_delete_button" />
        </LinearLayout>

    </LinearLayout>

 </ScrollView>